# frounding-rs

./: .gitignore  .project  .travis.yml  Cargo.toml  README.md  build.rs  index.html  search-index.js
csrc/: rounding_fpu.c  rounding_fpu.h  rounding_sse.c  rounding_sse.h
examples/: ex1.rs  testing_ex.rs
frounding/: enum.RoundingMode.html  index.html  sidebar-items.js  struct.RoundingState.html
frounding/rounding_mode/: enum.RoundingMode.html  sidebar-items.js
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Drop.js
src/: lib.rs  rounding_mode.rs
src/frounding/src/: lib.rs.html  rounding_mode.rs.html
